<resources>
    <string name="app_name">PopularMovies</string>
    <string name="movie_backdrop">Movie Backdrop</string>
    <string name="movie_poster_description">movie poster</string>
    <string name="release_date">Release date:</string>
    <string name="vote_average">Vote Average</string>
    <string name="overview">Overview</string>
    <string name="retry">RETRY</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="action_retry">RETRY</string>
</resources>
